plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-kapt'
    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
}
android {
    signingConfigs {
        release {
            storeFile file('../Ya Jary.jks')
            storePassword 'Ya Jary'
            keyAlias 'Ya Jary'
            keyPassword 'Ya Jary'
        }
    }
    namespace 'com.app.yajari'
    compileSdk 34

    defaultConfig {
        applicationId "com.app.yajari"
        minSdk 24
        targetSdk 34
        versionCode 4
        versionName "1.4"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
    }
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = "17"
    }
    buildFeatures {
        viewBinding true
        dataBinding true
    }
    android.applicationVariants.configureEach {
        variant ->
            variant.outputs.all {
                output ->
                    def date = new Date()
                    def version = variant.versionName
                    def formattedDate = date.format('dd_MM_yyyy')
                    def newApkName = "Yajari_" + formattedDate + "_v" + version + ".apk"
                    def file = new File(newApkName)
                    output.outputFileName = file
            }
    }
    kapt {
        javacOptions {
            option("-Xmaxerrs", 500)
        }
    }
    
    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
        kotlinOptions {
            jvmTarget = "17"
            freeCompilerArgs += [
                "-Xjvm-default=all",
                "-Xopt-in=kotlin.RequiresOptIn"
            ]
        }
    }
    
    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += [
            '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
        ]
    }
}

dependencies {

    implementation 'androidx.core:core-ktx:1.12.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.10.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.gms:play-services-location:21.0.1'
    implementation 'com.google.maps:google-maps-services:0.15.0'
    implementation 'com.google.android.libraries.places:places:3.2.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'androidx.fragment:fragment-ktx:1.6.1'
    implementation 'androidx.activity:activity-ktx:1.8.0'
    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.4'
    implementation 'androidx.navigation:navigation-ui-ktx:2.7.4'
    implementation 'androidx.databinding:databinding-runtime:8.1.2'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'


    implementation 'com.github.bumptech.glide:glide:4.16.0' /* Image Load Lib */
    implementation 'com.airbnb.android:lottie:6.1.0' /* Animation Lib */
    implementation 'com.github.dhaval2404:imagepicker:2.1'

    /* viewModel & Koin */
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
    implementation 'androidx.lifecycle:lifecycle-common-java8:2.6.2'
    implementation 'io.insert-koin:koin-android:3.4.3'

    /* Retrofit Lib */
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.6'
    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
    implementation 'com.squareup.moshi:moshi:1.15.0'
    implementation "com.squareup.moshi:moshi-adapters:1.15.0"
    implementation "com.squareup.moshi:moshi-kotlin:1.15.0"
    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"

    implementation platform('com.google.firebase:firebase-bom:32.2.0')
    implementation 'com.google.firebase:firebase-analytics:21.4.0'
    implementation 'com.google.firebase:firebase-crashlytics:18.5.0'
    implementation 'com.google.firebase:firebase-messaging-ktx:23.3.0'
    implementation 'com.google.firebase:firebase-dynamic-links-ktx'
    implementation 'com.github.ome450901:SimpleRatingBar:1.5.1'
    /* Toasty */
    implementation project(':toasty')
    /* OTP view*/
    implementation project(':otptextview')
    /* Side Menu */
    implementation project(':SlidingNavigation')
    /* Country code picker*/
    implementation 'com.github.joielechong:countrycodepicker:2.4.2'
    implementation 'io.michaelrocks:libphonenumber-android:8.12.55'
    /* Slider Indicator */
    implementation 'com.github.zhpanvip:viewpagerindicator:1.2.3'
    //localization
    implementation 'dev.b3nedikt.applocale:applocale:3.0.0'
    // Needed to intercept view inflation
    implementation 'dev.b3nedikt.viewpump:viewpump:4.0.10'
    implementation 'dev.b3nedikt.reword:reword:4.0.2'
    /** Circular Progress*/
    implementation project(':circularprogressindicator')
    /**
     * Keyboard visibility event
     */
    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3'

    /**
     * In App Review
     */
    implementation("com.google.android.play:review-ktx:2.0.1")
    implementation("com.google.android.play:review:2.0.1")
    implementation 'com.google.android.flexbox:flexbox:3.0.0'

}